[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/spriteframes/mounted_player.tres" type="SpriteFrames" id=1]
[ext_resource path="res://src/scripts/player.gd" type="Script" id=2]
[ext_resource path="res://assets/entities/cc_lance_blue.png" type="Texture" id=3]
[ext_resource path="res://src/scripts/Weapon.gd" type="Script" id=4]
[ext_resource path="res://src/animations/player_melee_right.tres" type="Animation" id=5]
[ext_resource path="res://src/animations/player_melee_left.tres" type="Animation" id=6]
[ext_resource path="res://assets/entities/cc_lance_swing.png" type="Texture" id=7]
[ext_resource path="res://src/animations/swing_stretch.tres" type="Animation" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 23.0
height = 30.0

[sub_resource type="CanvasItemMaterial" id=3]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 30, 18 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 30, 0, 30, 18 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 60, 0, 30, 18 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 90, 0, 30, 18 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 120, 0, 30, 18 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 150, 0, 30, 18 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "swing",
"speed": 14.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23.5, 34 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6.44545 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -3, -1 )
frames = ExtResource( 1 )
animation = "idle"

[node name="Weapon" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Weapon"]
playback_speed = 1.5
anims/attack_melee_left = ExtResource( 6 )
anims/attack_melee_right = ExtResource( 5 )
anims/swing_stretch = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="Weapon"]
material = SubResource( 3 )
texture = ExtResource( 3 )

[node name="SwingTrail" type="AnimatedSprite" parent="Weapon/Sprite"]
modulate = Color( 1, 1, 1, 0.705882 )
show_behind_parent = true
position = Vector2( 6, -11 )
rotation = 0.04262
scale = Vector2( 1, 2 )
frames = SubResource( 10 )
animation = "swing"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Weapon/Sprite"]
anims/swing_stretch = ExtResource( 8 )

[node name="Hitbox" type="Area2D" parent="Weapon"]
show_behind_parent = true

[node name="Location" type="CollisionShape2D" parent="Weapon/Hitbox"]
position = Vector2( 40, 0 )
shape = SubResource( 2 )

[connection signal="animation_finished" from="Weapon/AnimationPlayer" to="Weapon" method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Weapon/Hitbox" to="Weapon" method="_on_Hitbox_body_entered"]
